# ConqsterRealtimeRenderingTechnology

./: .gitignore  .gitmodules  3D Computer Game (Rendering & Simulation).sln  3D Computer Game (Rendering & Simulation).vcxproj  CMakeLists.txt  Personal note.txt  README.md  imgui.ini
Assets/Scene/: experiment.crrtscene  experiment2.crrtscene  shadowdepth.crrtshader
Assets/Shaders/: FragmentShader.glsl  GBufferFrag.glsl  StandardFrag.glsl  StandardFrag2.glsl  StandardVertex.glsl  VertexLearningOpen.glsl  VertexShader.glsl
Assets/Shaders/Advance/: Fragment.glsl  Obj2_Vertex.glsl  Obj3_Vertex.glsl
Assets/Shaders/Deferred/: DeferredShading.frag  DeferredShading.vert  GBuffer.frag  GBuffer.vert
Assets/Shaders/Experimental/: BasicVertexPos.glsl  BasicVertexPos.vert  DeferredShading.frag  DeferredShading.vert  ExperimentGBuffer.glsl
Assets/Shaders/Forward/: StandardFrag.glsl  StandardVertex.glsl
Assets/Shaders/Learning/: DepthTestFrag.glsl  DepthTestVertex.glsl  GlowingObjectFrag.glsl  KernelFragTextureEffect.glsl
Assets/Shaders/LightingScene/: NewModelFragment.glsl  NewModelVertex.glsl  PreviewMaterial.frag  PreviewMaterial.vert
Assets/Shaders/New/: MainSceneFragShader.glsl
Assets/Shaders/NewShadowMappingScene/: Lighting.frag  Lighting.vert
Assets/Shaders/Post Process/: QuadScreenVertex.glsl
Assets/Shaders/ShadowMapping/: DirectionalLightDepth.frag  ShadowDepthFrag.glsl  ShadowDepthGeometry.glsl
Assets/Shaders/Utilities/: LineDebuggerGeometry.glsl  ScreenFrameFrag.glsl
Assets/Textures/: BlackPlane.psd
Assets/Textures/chips_shop/: license.txt  scene.gltf
Assets/Textures/concrete_panels_4k.gltf/: concrete_panels_4k.gltf
Assets/Textures/sci-fi_electrical_charger/: license.txt  scene.gltf
Assets/Textures/subway_metro_train/: license.txt  scene.gltf
Docs/: DeferredVsForwardRendering.md  QuickStart.md
ReadMe_Docs/: DevelopmentIssues.md  Documentation.md
libs/Assimp/lib/: assimp-vc143-mt.exp  assimp-vc143-mt.lib
libs_cmake/: FindAssimp.cmake  FindGLEW.cmake  FindYAML.cmake
src/: LearningOpenGLModel.cpp  LearningOpenGLModel.h  UIManager.cpp  UIManager.h
src/Core/: Camera.cpp  Camera.h  EntryPoint.cpp  EventHandle.cpp  EventHandle.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  UIManager.cpp  UIManager.h  Window.cpp  Window.h
src/Core/Geometry/: AABB.h
src/Core/SceneGraph/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
src/Core/Scenes/: AdvanceLightingScene.cpp  AdvanceLightingScene.h  AdvanceOpenGLScene.cpp  AdvanceOpenGLScene.h  AntiAliasingScene.cpp  AntiAliasingScene.h  FaceCullingScene.cpp  FaceCullingScene.h  GeometryScene.cpp  GeometryScene.h  InstancingScene.cpp  InstancingScene.h  Light&ModelScene.cpp  Light&ModelScene.h  MainScene.cpp  MainScene.h  Scene.cpp  Scene.h  SceneManager.h  Textures_FrameBufferScene.cpp  Textures_FrameBufferScene.h
src/Geometry/: AABB.h  Frustum.h  Plane.h
src/Graphics/: DebugGizmos.cpp  DebugGizmos.h  LearningRenderer.cpp  LearningRenderer.h  MainRenderer.cpp  MainRenderer.h  Material.cpp  Material.h  NewShader.cpp  NewShader.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h  RendererErrorAssertion.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureCube.cpp  TextureCube.h  stb_image.cpp
src/Graphics/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Lights.cpp  Lights.h  NewLights.cpp  NewLights.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Graphics/Meshes/: CubeMesh.cpp  CubeMesh.h  Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  SphereMesh.cpp  SphereMesh.h  SquareMesh.cpp  SquareMesh.h
src/Graphics/ObjectBuffer/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  MSAA.cpp  MSAA.h  ShadowMap.cpp  ShadowMap.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
src/Physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/Renderer/: DebugGizmos.cpp  DebugGizmos.h  DeferredRenderingPipeline.h  Material.h  NewMaterial.h  RenderCommand.cpp  RenderCommand.h  Renderer.h  RendererConfig.h  RendererErrorAssertion.cpp  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureCube.cpp
src/Renderer/Lights/: LightManager.cpp  LightManager.h  Lights.cpp  Lights.h
src/Renderer/Meshes/: Mesh.cpp  Mesh.h  Meshes.h  ModelMesh.cpp  ModelMesh.h  PrimitiveMeshFactory.cpp  PrimitiveMeshFactory.h  SphereMesh.cpp  SquareMesh.cpp
src/Renderer/ObjectBuffer/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  MSAA.cpp  ShadowMap.cpp  ShadowMap.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Scene Graph/: Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Model.cpp  Model.h
src/Scene Graph/Deprecated/: GameObject.cpp  GameObject.h  Model.cpp  Model.h
src/Scene Graph/Scenes/: AdvanceLightingScene.cpp  AdvanceLightingScene.h  AdvanceOpenGLScene.cpp  AdvanceOpenGLScene.h  AntiAliasingScene.cpp  AntiAliasingScene.h  AvailableScenes.h  ExperimentScene.cpp  ExperimentScene.h  FaceCullingScene.cpp  FaceCullingScene.h  ForwardVsDeferredRenderingScene.cpp  ForwardVsDeferredRenderingScene.h  GeometryScene.cpp  GeometryScene.h  InstancingScene.cpp  InstancingScene.h  Light&ModelScene.h  LightingModelingScene.cpp  LightingModelingScene.h  MainScene.cpp  MainScene.h  NewScene.h  ParallaxExperimentalScene.cpp  ParallaxExperimentalScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ShadowMappingScene.cpp  ShadowMappingScene.h  Textures_FrameBufferScene.cpp  Textures_FrameBufferScene.h
src/ShaderFiles/: FragLearningOpen.glsl  FragmentShader.glsl  ModelFragShader.glsl  ModelVertexShader.glsl  SkyboxFragment.glsl  VertexLearningOpen.glsl
src/Util/: Constants.h  FilePaths.h  GPUStructure.h  GameTime.h  MathsHelpers.h  ModelLoader.cpp  ModelLoader.h  ModelLoaderN.cpp  ModelLoaderN.h  SceneSerialiser.cpp  SceneSerialiser.h  ShaderHotReload.cpp  ShaderHotReload.h  Vector.h  YAMLHelperSerialiser.h
(+66 files in other folders)
